@@ -71,6 +71,7 @@ Greg A. Woods		woods@most.weird.com
 Guido Draheim		guidod@gmx.de
 Gustavo Carneiro	gjc@inescporto.pt
 H.J. Lu			hjl@lucon.org
+H.Merijn Brand		h.m.brand@hccnet.nl
 Harlan Stenn		Harlan.Stenn@pfcs.com
 Henrik Frystyk Nielsen	frystyk@w3.org
 Ian Lance Taylor	ian@cygnus.com
