@@ -1,3 +1,9 @@
+2002-12-31  Alexandre Duret-Lutz  <adl@gnu.org>
+
+	* automake.in (err): Rename as ...
+	(error): ... this.  Adjust all callers.
+	Suggested by H.Merijn Brand.
+
 2002-12-13  Alexandre Duret-Lutz  <adl@gnu.org>
 
 	* tests/version7.test: Require GNU make.
